--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="app.project.cualivy">
+    package="app.project.cualivy_capstone">
+
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
@@ -10,13 +18,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CualiVy"
+        android:theme="@style/Theme.Cualivy_Capstone"
         tools:targetApi="31">
         <activity
-            android:name=".register.RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".login.LoginActivity"
+            android:name=".GalerryActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
