--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "CualiVy"
+rootProject.name = "Cualivy_Capstone"
 include ':app'
